Fix ingredient header spacing on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ h1, h2, h3, h4, h5, h6,
     }
 
     .ingredients h3 {
-        font-size: 1.3rem;
+        margin: 2.4rem 0;
     }
 
     .ingredient {
